--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "prepare": "husky install",
     "prepublishOnly": "npm run build && npm test"
   },
-  "keywords": ["math", "mathematics", "typescript"],
+  "keywords": [
+    "math",
+    "mathematics",
+    "typescript"
+  ],
   "author": "Tejas Benibagde",
   "license": "MIT",
   "repository": {
@@ -28,7 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
-    "husky": "^7.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.0.0",
