--- a/package.json
+++ b/package.json
@@ -40,11 +40,9 @@
     "typescript": "^4.0.0"
   },
   "lint-staged": {
-    "*.ts": [
-      "prettier --write",
-      "eslint --fix"
-    ],
     "*.{js,ts}": [
+      "prettier --write",
+      "eslint --fix",
       "npm run build",
       "npm test"
     ]
