--- a/docs/blog/tags.yml
+++ b/docs/blog/tags.yml
@@ -1,17 +1,12 @@
-facebook:
-  label: Facebook
-  permalink: /facebook
-  description: Facebook tag description
+samasya:
+  label: samasya
+  permalink: /samasya
+  description: A TypeScript-based mathematical library inspired by math.js
 
 hello:
   label: Hello
   permalink: /hello
   description: Hello tag description
-
-docusaurus:
-  label: Docusaurus
-  permalink: /docusaurus
-  description: Docusaurus tag description
 
 hola:
   label: Hola
