--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
     "prettier": "^2.0.0",
     "ts-jest": "^27.0.0",
     "typescript": "^4.0.0"
+  },
+  "dependencies": {
+    "katex": "^0.16.18",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   }
 }
