--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "prettier": "^2.0.0",
     "ts-jest": "^27.0.0",
     "typescript": "^4.0.0"
+  },
+  "dependencies": {
+    "decimal.js": "^10.4.3"
   }
 }
